Fix overlapping of filters in mobile view

--- a/assets/css/settings.scss
+++ b/assets/css/settings.scss
@@ -44,7 +44,6 @@
 	}
 }
 #woothemes-sensei  {
-	position: relative;
 	.fl  {
 		float: left;
 	}
